--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Advice #<span id="advice-number"></span>
             </p>
             <!-- Advice text goes here -->
-            <p class="advice-text">Loading..</p>
+            <h1 class="advice-text">Loading...</h1>
         </div>
 
         <!-- Divider -->
